In the ExtractObject method, the default reader has been changed to InputStreamReader, and the encoding is now specified as StandardCharsets.UTF_8